# profile.mobile.apps.native.email-app

./: .cproject  .gitignore  .project  org.tizen.email-0.9.34-arm-debug.tpk  org.tizen.email-0.9.34-arm.tpk  org.tizen.email-0.9.34-arm_debug.tpk  org.tizen.email-0.9.34-i386-debug.tpk  org.tizen.email-0.9.34-i386.tpk  org.tizen.email-0.9.34-i386_debug.tpk  org.tizen.email-2.4.manifest  org.tizen.email.efl  org.tizen.email.manifest  org.tizen.email.xml  project_def.prop  tizen-manifest.xml
CMake/: CMakeLists.txt
CMake/email-common/: CMakeLists.txt
CMake/main/: CMakeLists.txt
CMake/main/email/: CMakeLists.txt
CMake/main/email-composer/: CMakeLists.txt
CMake/main/email-setting/: CMakeLists.txt
CMake/main/email-single/: CMakeLists.txt
CMake/modules/: CMakeLists.txt
CMake/modules/email-account-module/: CMakeLists.txt
CMake/modules/email-composer-module/: CMakeLists.txt
CMake/modules/email-filter-module/: CMakeLists.txt
CMake/modules/email-mailbox-module/: CMakeLists.txt
CMake/modules/email-setting-module/: CMakeLists.txt
CMake/modules/email-viewer-module/: CMakeLists.txt
CMake/po/: CMakeLists.txt
Project-Files/common/inc/: email-color-box.h  email-colors.h  email-common-contact-defines.h  email-common-types.h  email-debug.h  email-editfield-utils.h  email-engine.h  email-media-content.h  email-module-core.h  email-module-dev.h  email-module-launcher.h  email-module.h  email-params.h  email-popup-utils.h  email-request-queue.h  email-utils-contacts.h  email-utils.h
Project-Files/common/src/: email-debug.c  email-editfield-utils.c  email-engine.c  email-media-content.c  email-module-core.c  email-module-launcher.c  email-params.c  email-popup-utils.c  email-request-queue.c  email-utils-contacts.c  email-utils.c
Project-Files/main/: email-main.c
Project-Files/resources/misc/: _email_default.html  default.css  email-composer.css  provider_list_default.xml
Project-Files/resources/po/: el_GR.po  en_US.po  es_ES.po  es_US.po  eu.po  fr.po  fr_CA.po  ga.po  hu.po  hy.po  pt_BR.po  ro.po  sk.po  sr.po  sv.po  tr_TR.po  zh_TW.po
SDK-3.0-Projects/email/: .cproject  .gitignore  .project  copy-binnary.sh  copy-res.sh  project_def.prop  tizen-manifest.xml
SDK-3.0-Projects/email-account-module/: .cproject  .project
SDK-3.0-Projects/email-common/: .cproject  .project
SDK-3.0-Projects/email-composer/: .cproject  .project  tizen-manifest.xml
SDK-3.0-Projects/email-composer-module/: .cproject  .project
SDK-3.0-Projects/email-filter-module/: .cproject  .project
SDK-3.0-Projects/email-mailbox-module/: .cproject  .project
SDK-3.0-Projects/email-setting/: .cproject  .project  tizen-manifest.xml
SDK-3.0-Projects/email-setting-module/: .cproject  .project
SDK-3.0-Projects/email-viewer-module/: .cproject  .project
Tools/: changeable_xml_generator_app.sh  find_unused_images.sh  find_unused_images2.sh  find_unused_string.sh  read_me.txt  replace_po_quatation.pl
common/inc/: email-colors.h  email-common-types.h  email-debug.h  email-engine.h  email-html-converter.h  email-images.h  email-locale.h  email-module-core.h  email-module-dev.h  email-module-launcher.h  email-module.h  email-request-queue.h  email-utils-contacts.h  email-utils.h
common/src/: email-color-box.c  email-engine.c  email-html-converter.c  email-module-core.c  email-module-launcher.c  email-params.c  email-request-queue.c  email-utils-contacts.c  email-utils.c
edc/account/: email-account-base-layout.edc
edc/common/: email-colors.edc  email-parts.edc  email-round-icon-button-style.edc  email-two-bottom-btn-toolbar-theme.edc
edc/composer/: email-composer-attachment.edc  email-composer-edc-common.edc  email-composer-edc-define.h  email-composer-layouts.edc  email-composer-popup.edc  email-composer-predictive-search.edc  email-composer-recipients.edc  email-composer-rich-text.edc  email-composer-scroller.edc  email-composer-subject.edc  email-composer-toolbar-buttons_defines.edc
edc/mailbox/: email-mailbox-genlist-style.edc  email-mailbox-macros.edc  email-mailbox-server-search.edc  email-mailbox-theme.edc
edc/setting/: email-setting-genlist-item-custom-theme.edc  email-setting-two-bottom-btn-theme.edc
edc/viewer/: email-viewer-base-layout.edc  email-viewer-common.edc  email-viewer-scroller.edc  email-viewer-subject-layout.edc
main/: email-main.c
modules/account/inc/: email-account-util.h  email-account.h
modules/account/src/: email-account-folder-move.c  email-account-folder.c  email-account-list-view.c  email-account-util.c  email-account.c
modules/composer/inc/: email-composer-attachment.h  email-composer-initial-data.h  email-composer-initial-view.h  email-composer-js.h  email-composer-launcher.h  email-composer-more-menu.h  email-composer-predictive-search.h  email-composer-recipient.h  email-composer-rich-text-toolbar.h  email-composer-subject.h  email-composer-types.h  email-composer-util.h  email-composer-webkit.h  email-composer.h
modules/composer/src/: email-composer-attachment-resize-image.c  email-composer-attachment-ui.c  email-composer-attachment.c  email-composer-initial-data.c  email-composer-initial-view.c  email-composer-launcher.c  email-composer-more-menu.c  email-composer-predictive-search.c  email-composer-recipient-callback.c  email-composer-recipient.c  email-composer-rich-text-toolbar.c  email-composer-send-mail.c  email-composer-subject.c  email-composer-util-image.c  email-composer-util-popup.c  (+4 more)
packaging/: org.tizen.email.spec
res/edje/: email-account.edc  email-common-theme.edc  email-composer-view.edc  email-filter.edc  email-mailbox.edc  email-setting-theme.edc  email-viewer.edc
res/misc/: _email_default.html  _email_template.html  _email_template_text.html  default.css  email-composer.css  email-composer.js
res/po/: ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  (+10 more)
(+231 files in other folders)
