CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(email-composer C)

SET(SRCS ${PROJECT_FILES_DIR}/main/email-main.c)

ADD_DEFINITIONS("-DAPP_MODULE_TYPE=EMAIL_MODULE_COMPOSER")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} email-common)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
