CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(email-setting C)

SET(SRCS ${PROJECT_FILES_DIR}/main/email-main.c)

ADD_DEFINITIONS("-DAPP_MODULE_TYPE=EMAIL_MODULE_SETTING")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} email-common ${pkgs-email_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
